poc/resources/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: user-ns
  labels:
    istio-injection: enabled
