poc/resources/user-service-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service-canary
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - port: 4000
      targetPort: 3000
      name: http-primary-port
