poc/resources/user-service-stable.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service-stable
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - port: 4000
      targetPort: 3000
      name: http-primary-port
