poc/resources/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
#        - destination:
#            host: user-service-canary
#            port:
#              number: 4000
#          weight: 70
        - destination:
            host: user-service-stable
            port:
              number: 4000
          weight: 100
